# nextup

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_user_profile.py  0002_create_gym_court.py  0003_create_basketball_run.py  0004_create_run_registration.py  0005_create_notification_audit.py
apps/api/app/: __init__.py  enums.py  main.py  seed.py
apps/api/app/api/: __init__.py
apps/api/app/core/: __init__.py  authz.py  config.py  dependencies.py  exceptions.py  logging.py  metrics.py  middleware.py  ratelimit.py  security.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  audit.py  gym.py  notification.py  registration.py  run.py  user.py
apps/api/app/repositories/: __init__.py  gym.py  notification.py  registration.py  run.py  user.py
apps/api/app/scheduling/: __init__.py  engine.py
apps/api/app/schemas/: __init__.py  common.py  gym.py  notification.py  registration.py  roster.py  run.py  user.py
apps/api/app/services/: __init__.py  audit.py  cancellation.py  gym.py  notification.py  registration.py  roster.py  run.py  user.py
apps/api/app/workers/: __init__.py  celery_app.py
apps/api/tests/: conftest.py  test_auth.py  test_cancellation.py  test_cancellation_concurrency.py  test_gyms.py  test_health.py  test_keycloak_realm.py  test_observability.py  test_registration.py  test_registration_concurrency.py  test_roster.py  test_run_status.py  test_runs.py  test_scheduling.py  test_seed.py  test_users.py
docs/: API.md  RUNBOOK.md  (+7 more)
(+88 files in other folders)
