[project]
name = "nextup-api"
version = "0.1.0"
description = "NextUp backend — FastAPI basketball-run scheduling API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "structlog>=24.4",
    "celery[redis]>=5.4",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.10",
    "prometheus-fastapi-instrumentator>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
]

# The application is run from source (uvicorn app.main:app); it is not built as an
# installable wheel, so uv treats it as a virtual project (deps only, no build).
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "ASYNC", "PT", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in argument defaults

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"tests/*" = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
